# UrbanReconstrution

./: .gitignore  LICENSE.txt  README.md
.github/workflows/: ci.yml
building_reconstruction/: Algo_reconstruction.cpp  Algo_reconstruction.h  Building_reconstruction.cpp  Building_reconstruction.h  CMakeLists.txt  Index_map.h  Surface_reconstruction.h  building_reconstruction_example.cpp  metric_image_compare_example.cpp  metrics_examples.cpp  texturing_map_example.cpp
building_reconstruction/BestFittingTexturing/: BestFittingTexturingQuality.cpp  BestFittingTexturingQuality.h
building_reconstruction/ColorTransfer/: ColorTransferMeanLocal.cpp  ColorTransferMeanLocal.h  ColorTransferMeanSamePolygons.cpp  ColorTransferMeanSamePolygons.h  config.json
building_reconstruction/FileUtils/: FileUtils.cpp  FileUtils.h
building_reconstruction/Geometry/: Geometry_pcl.cpp  Geometry_pcl.h
building_reconstruction/IO/: Io_cgal.cpp  Io_cgal.h  Io_pcl.cpp  Io_pcl.h
building_reconstruction/Metrics/: BlurEstimation.cpp  BlurEstimation.h  Metrics.cpp  Metrics.h
building_reconstruction/PointClouds/: Shift.cpp  Shift.h
building_reconstruction/StringUtils/: PathUtils.cpp  PathUtils.h
building_reconstruction/Texturing/: FaceIndexMaps.cpp  FaceIndexMaps.h  MtlUtils.cpp  MtlUtils.h  TexturingMapping.cpp  TexturingMapping.h  Texturing_mapping.cpp  Texturing_mapping.h
building_reconstruction/Texturing/IO/: Image_txt_reading.cpp  Image_txt_reading.h
building_reconstruction/Texturing/Image/: Lidar2depth.cpp  Lidar2depth.h  Panorama2cubemap.cpp  Panorama2cubemap.h
building_reconstruction/consts/: PCLTexMaterialConsts.h
data/metrics_examples/: metrics_results.txt
